<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/textview1"
        android:textAlignment="center"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="#FFFFEA01"
        android:layout_toLeftOf="@+id/textView1"
        android:layout_centerVertical="true"
        android:layout_margin="30dp"
        android:background="@drawable/textviewframe"
        android:text="hello world" />

    <Button
        android:onClick="buttonC1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="button11"
        android:background="@drawable/textviewframe"
        android:layout_toRightOf="@+id/textView1"
        android:layout_centerVertical="true"
        android:layout_margin="30dp"/>

    <ImageButton
        android:src="@drawable/test1"
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <ToggleButton
        android:id="@+id/ToggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button2"/>


    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ToggleButton"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp">


        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_1"
            />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_2"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_3"/>

    </RadioGroup>

    <CheckBox
        android:id="@+id/checkobx1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checktext1"
        android:layout_toRightOf="@+id/button2"
        android:layout_marginLeft="10dp"
        />

    <CheckBox
        android:id="@+id/checkbox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checktext2"
        android:layout_below="@+id/checkobx1"
        android:layout_alignLeft="@+id/checkobx1"
        />

    <CheckBox
        android:id="@+id/checkbox3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checktext3"
        android:layout_below="@+id/checkbox2"
        android:layout_alignLeft="@+id/checkbox2"
        />


    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#ffff00"
        android:indeterminateTint="#999999"
        android:layout_centerInParent="true"
        android:visibility="visible"
        style="@style/Widget.AppCompat.ProgressBar"/>


    <ImageView
        android:id="@+id/imageV"
        android:onClick="imagevbtn"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:src="@drawable/test1"
        android:adjustViewBounds="true"
        android:layout_below="@id/textView1"
        android:layout_marginTop="30dp"
        android:layout_alignLeft="@id/textView1" />

    <SeekBar
        android:id="@+id/seekbar1"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageV"
        android:layout_marginTop="20dp"
        android:layout_alignLeft="@id/textView1"

        />

    <TextView
        android:id="@+id/textv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="aaaaaaa"
        android:layout_below="@id/seekbar1"
        android:layout_marginTop="20dp"
        android:layout_alignLeft="@id/textView1"

        />


    <TextView
        android:id="@+id/textview2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textv"
        android:layout_marginTop="20dp"
        android:text="@string/texts"
        android:textSize="30sp"
        android:textColor="#ff9878"
        android:background="@drawable/textviewframe"
        android:gravity="center"
        android:lines="2"
        android:singleLine="true"
        android:textColorLink="#fff00009"
        android:textScaleX="1.2"
        android:textStyle="bold"
        android:autoLink="phone"

        />


</RelativeLayout>